@@ -1,6 +1,7 @@
 2.0.5
 -----
 o Fixes problem where predicates are evaluated wrongly in NOT
+o Fixes problem when WITH introduces a symbol that shadows an existing identifier
 
 2.0.4
 -----
